# di-rac

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  build.sh  commitmsgstyle.md  context-report.md  daemon_stderr  docs  esbuild-cli.mts  esbuild.mjs  package-lock.json  package.json  rust_out  tatus  tool-descriptions-v9.5.1.txt  tool-descriptions-v9.5.txt  tsconfig.json
.di-tmp/: commit8a277cb.diff
api-gateway/: codex_oauth.go  go.mod  go.sum  main.go
central-daemon/: .gitignore  CMakeLists.txt  issues.md
central-daemon/include/: trie.h
central-daemon/src/: json.h  main.c  trie.c
central-daemon/tests/: broker_test.c  trie_test.c
central-deamon/: CMakeLists.txt
central-deamon/include/: hashmap_interface.h  trie.h
central-deamon/src/: main.c  trie.c
central-deamon/tests/: trie_test.c
cli/: esbuild.mts  package.json  tsconfig.json
command-daemon/: CMakeLists.txt
command-daemon/src/: executor.c  executor.h  json-write.h  json.h  main.c  protocol.c  protocol.h  safety.c  safety.h  session.c  session.h
command-daemon/tests/: run.sh
demo-hooks/: 01-hello-loop.dhook  02-rust-validation.dhook  03-observer-trigger.dhook  04-observer-escalation.dhook  05-migration-workflow.dhook  06-generated-file-guidance.dhook  07-dependency-audit.dhook  08-prompt-shaping.dhook  09-session-overlay.dhook  10-dedupe-stress.dhook  11-loop-guard.dhook  12-invalid-import.dhook  12-invalid-unknown-field.dhook  25-conflicting-finish.dhook  26-observer-fanout.dhook  27-duplicate-final-note.dhook  28-observer-schema-missing.dhook  29-validation-evidence.dhook  30-scope-narrowing.dhook  31-planner-review-guard.dhook  32-severity-ordering.dhook  33-session-overlay-merge.dhook  34-invalid-overlay.dhook  35-large-hook-limit.dhook  36-waiver-path.dhook  37-bad-event-name.dhook  38-unknown-action.dhook  39-forbidden-import.dhook  40-forbidden-loop.dhook  41-bad-validation-argv.dhook  42-bad-severity.dhook  43-unknown-group.dhook  44-duplicate-group.dhook  45-duplicate-role.dhook  46-role-missing-budget.dhook  47-trigger-unknown-observer.dhook  48-a-cache-version.dhook  48-b-cache-version.dhook  48-c-invalid-edit.dhook  50-base.dhook
di-core/: Cargo.toml
di-core/docs/: context-compilation.md
di-core/src/: main.rs  util.rs
di-core/src/agent/: artifact.rs  engine.rs  environment.rs  file_context.rs  metrics.rs  mod.rs  parser.rs  recovery.rs  trajectory.rs
di-core/src/context/: adaptive_triggers.rs  eval.rs  lifecycle.rs  lifecycle_metrics.rs  mod.rs  reranker.rs  task_state.rs  token_estimator.rs
di-core/src/context/distiller/: admission.rs  mod.rs  model.rs  noop.rs  prompts.rs  schemas.rs  validate.rs
di-core/src/daemons/: mod.rs
di-core/src/hooks/: compiler.rs  directive.rs  evaluator.rs  ir.rs  loader.rs  mod.rs  validator.rs
di-core/src/hooks/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
di-core/src/observer/: mod.rs  prompts.rs  store.rs
di-core/src/prompt/: mod.rs  session.rs  stable.rs
di-core/src/protocol/: mod.rs
di-core/src/tools/: approval.rs  ask_followup.rs  attempt_completion.rs  background.rs  cli_parse.rs  edit_file.rs  format.rs  list_files.rs  mod.rs  output_manager.rs  read_file.rs  response.rs  routing.rs  search_files.rs  symbols.rs  tool_defs.rs  write_to_file.rs
di-core/src/util/: secrets.rs
divrr/: Cargo.toml
divrr/src/: agent.rs  app.rs  app_types.rs  backend.rs  clipboard.rs  commands.rs  errors.rs  event.rs  gateway.rs  hooks_editor.rs  input.rs  line_cache.rs  logging.rs  main.rs  message.rs  settings.rs  settings_model.rs  summarize.rs  theme.rs
divrr/src/ui/: conversation.rs  hooks.rs  input_box.rs  mod.rs  palette.rs  queue.rs  settings.rs  top_bar.rs
dsl-design/: daemon-hooks.md  go-hooks.md  hook-points.md  hook-system-report.md  manifest-schema.md  rust-hooks.md  synthesis.md  wasm-interface.md
findings-usecases/: README.md  ag2-hooks-system.md  agent-loop-hooks.md  api-gateway-extensibility.md  bun-plugin-and-final-synthesis.md  cline-dify-hooks.md  community-extensions-catalog.md  comparative-analysis-and-tradeoffs.md  core-agent-loop-architecture.md  crewai-hooks-system.md  daemon-protocols-hook-opportunities.md  design-patterns.md  developer-experience-lessons.md  di-core-hook-opportunities.md  dsl-syntax-proposals.md  eclipse-osgi-plugin-architecture.md  ecosystem-comparison.md  extension-api-surface.md  extension-authoring-patterns.md  extension-runner-internals.md  genkit-openai-agents.md  github-copilot-hooks-prod-lessons.md  go-middleware-and-intellij-plugins.md  haystack-breakpoints.md  hermes-agent-hooks.md  k8s-admission-webhooks.md  langchain-middleware-system.md  layering-and-tool-wrapping.md  letta-smolagents-hooks.md  linux-kernel-hook-systems.md  message-transformation-pipeline.md  microkernel-and-jenkins-plugins.md  pi-creator-design-philosophy.md  pi-vs-openclaw-comparison.md  plugin-sdk-and-memory-patterns.md  pydantic-ai-hooks.md  rpc-and-sdk-architecture.md  rust-harness-hooks-and-governance.md  rust-tower-middleware.md  scheduling-and-background-patterns.md  (+10 more)
scripts/: api-secrets-parser.mjs  build-proto.mjs  build-tests.js  download-wasm-python.mjs  dump-system-prompt.py  generate-host-bridge-client.mjs  (+1 more)
treesitter-daemon/: CMakeLists.txt  Cargo.toml
treesitter-daemon/include/: analyzer.h  queries.h
treesitter-daemon/include-c/: analyzer.h  db.h  languages.h  queries.h
treesitter-daemon/queries/: bash.rs  c.rs  cpp.rs  csharp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
treesitter-daemon/src/: analyzer.c  cache.rs  commands.rs  context.rs  db.c  db.rs  error.rs  extractor.rs  indexer.rs  language.rs  lib.rs  main.c  main.rs  parser.rs  queries.c  repo_map.c  skeleton.c  skeleton.rs  symbol_range.rs
treesitter-daemon/src-c/: analyzer.c  db.c  languages.c  main.c  queries.c  repo_map.c  search.c  skeleton.c
treesitter-daemon/src/queries/: bash.rs  c.rs  cpp.rs  csharp.rs  go.rs  java.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  typescript.rs
treesitter-daemon/tests/: c_query_debug.rs  test_daemon_io.py
wasm-runner/: Cargo.toml
wasm-runner/src/: main.rs
(+515 files in other folders)
