[package]
name = "di-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
interprocess = "1.2" # For UDS communication with C daemons
blake3 = "1.5" # Stable content hashing across process restarts
regex = "1.10"
async-trait = "0.1"
pathdiff = "0.2"
arc-swap = "1.7"
glob = "0.3"

[dev-dependencies]
proptest = "1"
