[package]
name = "divrr"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
arboard = "3.4"
shellexpand = "3.1"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
