[package]
name = "di-rvv-analyzer"
version = "0.1.0"
edition = "2021"
description = "Standalone tree-sitter analysis binary for di"
authors = ["di Team"]
license = "MIT"

[[bin]]
name = "di-rvv-analyzer"
path = "src/main.rs"

[lib]
name = "di_rvv_analyzer"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-bash = "0.23"

tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"

rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
